# crito

./: .env.example  .gitignore  Makefile  README.md  RUNBOOK.md  indi-drivers.local  observatory-ciao.yaml  observatory.yaml  pyproject.toml  requirements.txt  start-ciao.sh  start-indi.sh
.github/workflows/: ci.yml
calibration/: minicam8.example.yaml
cassa/agent/: astap.py  device_manager.py  fits_writer.py  phd2.py  precision.py  safety.py  weather_api.py
cassa/core/: app.py  archive.py  auth.py  catalog.py  config.py  db.py  observatory.py  transient_db.py  transient_routes.py
cassa/dal/: indi_adapter.py  roles.py
cassa/transient/: __init__.py  alerce.py  approvals.py  candidates.py  email_notify.py  executor.py  plans.py  poller.py  requests.py  visibility.py
crito/: __init__.py
crito/agent/: __init__.py  astap.py  device_manager.py  fits_writer.py  phd2.py  precision.py  safety.py  weather_api.py
crito/calib/: __init__.py  analysis.py  characterize.py
crito/core/: __init__.py  activity.py  app.py  archive.py  auth.py  catalog.py  config.py  db.py  observatory.py  storage.py  transient_db.py  transient_routes.py
crito/dal/: __init__.py  imaging.py  indi_adapter.py  roles.py
deploy/: docker-compose.yml  indi-sim.Dockerfile
docs/: COOKBOOK.md  exposure-planning.md  qhy-minicam8-firmware-fix.md
sites/: virtual.yaml
tests/: test_astap.py  test_auth.py  test_calib.py  test_catalog.py  test_devices.py  test_exposure.py  test_fits.py  test_protocol.py  test_safety.py  test_transient.py
web/: index.html  package-lock.json  package.json
(+45 files in other folders)
